# PSD_opt

./: .gitignore  PSD_Exp.py  PSD_Sim.py  README.md  cell_average_debug.py  conda_env_win64.yml  generate_psd.py  job.slurm  kernel_math.py  kernel_opt.py  kerns_opt.py  multi_opt.py  multi_q3_BO_KL_wight_1.npz  opt_algo.py  opt_algo_multi.py  opt_config.py  opt_find.py  opt_main.py  opt_method.py  pop - alt.py  pop.py  pop_MC.py  post_process.py  pyproject.toml  requirements.txt  requirements_ray.txt  res.txt  result.npz
TestFunction/: BayesOpt.py  Dependency_Test.py  Himmelblau.py  Nosie_test.py  Opt_test.py  PSD_Opt.py  base_opt_test.py  generate_all_data.py  kernels.txt  psd_read_and_smoothing_test.py
config/: Extruder0_config.py  PBE_config.json  PBE_config.py  opt_config.py
data/: CED_focus.xlsx  CED_focus_Sim.xlsx  CED_focus_Sim_0.xlsx  CED_focus_Sim_1.xlsx  CED_focus_Sim_Gaussian_0.005.xlsx  CED_focus_Sim_Gaussian_0.005_0.xlsx  CED_focus_Sim_Gaussian_0.005_1.xlsx  CED_focus_Sim_Gaussian_0.005_2.xlsx  CED_focus_Sim_Gaussian_0.005_3.xlsx  CED_focus_Sim_Gaussian_0.005_4.xlsx  CED_focus_Sim_Gaussian_0.005_5.xlsx  CED_focus_Sim_Gaussian_0.005_6.xlsx  CED_focus_Sim_Gaussian_0.005_7.xlsx  CED_focus_Sim_Gaussian_0.005_8.xlsx  CED_focus_Sim_Gaussian_0.005_9.xlsx  CED_focus_Sim_Gaussian_0.01.xlsx  CED_focus_Sim_Gaussian_0.01_0.xlsx  CED_focus_Sim_Gaussian_0.01_1.xlsx  CED_focus_Sim_Gaussian_0.01_10.xlsx  CED_focus_Sim_Gaussian_0.01_11.xlsx  CED_focus_Sim_Gaussian_0.01_12.xlsx  CED_focus_Sim_Gaussian_0.01_13.xlsx  CED_focus_Sim_Gaussian_0.01_14.xlsx  (+101 more)
docs/: README.txt  (+29 more)
(+361 files in other folders)
