[tool.poetry]
name = "optframework"
version = "0.6.2"
description = "A dPBE solver based framework used to find kernel parameters."
authors = ["HR94 <haoran.ji@kit.edu>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "optframework" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.0"
pandas = "^2.2.3"
numba = "^0.60.0"
scipy = "^1.14.1"
scikit-optimize = "^0.10.2"
bayesian-optimization = "^2.0.2"
matplotlib = "^3.10.0"
openpyxl = "^3.1.5"
optuna = "^4.1.0"
cmaes = "^0.11.1"
ray = {extras = ["default,train,tune"], version = "^2.40.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
